Edit tracker page

--- a/web/tracker.html
+++ b/web/tracker.html
@@ -34,9 +34,9 @@
 			<div class="inner">
 
 				<header>
-					<h2>FAQ</h2>
+					<h2>SCTS Tracker</h2>
+					<p>Get inside SCTS</p>
 				</header>
-				<p>Frequently Asked Questions</p>
 
 			</div>
 
@@ -44,38 +44,18 @@
 
 		<!-- Main -->
 		<article id="main">
+
 			<header class="special container">
 				<img style="margin-top: -200px;" src="https://s24.postimg.org/t6rucdmid/ETHEREUM_YOUTUBE_PROFILE_PIC.png" />
 
 				<div style="margin: 10px">
-		<h2>What is SCTS?
-						<br />
-				        </h2>
-		<p>SCTS stands for "Supply Chain Tracking System". STCS is a Smart Contract framework to keep tracking of products from the raw materials to the shopping stage. This system is powered by the <a href="https://ethereum.org">Ethereum</a> Blockchain, so it's fully distributed, immutable and auditable.</p>
-	</div>
+					<p><p>
+					<h4>Introduce an address</h4>
+					<input style="margin: 10px; margin-top: 70px;" type="text" placeholder="Product or Handler address" class="focus">
+					<input style="margin: 10px" type="submit" value="Search">
+</div>
 <div style="margin: 10px">		<p><p>
-
-<h2>How's this done?
-						<br />
-				        </h2>
-		<p>Every Product in SCTS is represented in a Smart Contract, which keeps track of actions being made by Ethereum accounts. The community in charge of SCTS (could be a government, a consortium or even a DAO) can register this account as official SCTS Product Handlers, so their identity is stored in the Blockchain being impossible for fake producers or suppliers to cheat and sell products in the name of a registered Brand.</p>
-		<p><p>
-		<p>Because of this, any costumer, government or regulatory institution can scan a QR code in the product packaging, which identifies the Smart Contract representing the exact unit of the Product, or even introduce the address of the Smart Contract, and be able to track and audit all the life of the Product.</p>
-		<p>But there's more. Anyone will be also able to introduce the code of a SCTS Product Handler and see all the actions this individual or institution has performed on SCTS Products, empowering a more transparent and fair global economic system.</p>
-	</div>
-<div style="margin: 10px">
-<h2>How do we know that a Handler is not cheating?
-						<br />
-				        </h2>
-		<p>It's as easy as playing a game. SCTS is designed following game theories, so it enforces everyone to look for a win win. A registered Handler is a reputed individual or institution which depends a lot on marketing and credibility, if it cheats and get discovered, its reputation will be seriously hurt, so it'll put in a huge risk its relationship with partners, governments and institutions. If the Handler acts in a correct way, it'll maintain and even increase a huge reputation being seen as a trustful, responsible and fair company.</p>
-	</div>
-<div style="margin: 10px">		<p><p>
-
-<h2>What's the SCTS Database contract address?
-						<br />
-								</h2>
-		<p>The Ropsten testnet contract address for the SCTS Database is 0xec9CAab87327Cf406Ba251cb4BcEbAFfcD794357, here you can see more about the contract at <a href="https://testnet.etherscan.io/address/0xec9caab87327cf406ba251cb4bcebaffcd794357">Etherscan</a>.</p>
-
+</div>
 		</header>
 
 
