--- a/web/tracker.html
+++ b/web/tracker.html
@@ -11,6 +11,12 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.dropotron.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/jquery.scrollgress.min.js"></script>
+
 	</head>
 	<body class="index">
 		<div id="page-wrapper">
@@ -45,15 +51,26 @@
 		<!-- Main -->
 		<article id="main">
 
-			<header class="special container">
+			<header id="tracker-content" class="special container">
 				<img style="margin-top: -200px;" src="https://s24.postimg.org/t6rucdmid/ETHEREUM_YOUTUBE_PROFILE_PIC.png" />
 
-				<div style="margin: 10px">
-					<p><p>
-					<h4>Introduce an address</h4>
-					<input style="margin: 10px; margin-top: 70px;" type="text" placeholder="Product or Handler address" class="focus">
-					<input style="margin: 10px" type="submit" value="Search">
-</div>
+				<script>
+				if (typeof web3 !== 'undefined') {
+					$('#tracker-content').append('\
+						<div style="margin: 10px"> \
+							<p><p> \
+							<h4>Introduce an address</h4> \
+							<input style="margin: 10px; margin-top: 70px;" type="text" placeholder="Product or Handler address" class="focus"> \
+							<input style="margin: 10px" type="submit" value="Search"> \
+						</div> \
+					');
+				} else {
+					$('#tracker-content').append('\
+					<h1>You need an Ethereum powered browser to use this feature</h1> \
+					<h3>Use <strong><a href="https://github.com/ethereum/mist/releases">Mist</a></strong> or the <strong><a href="https://metamask.io/">Metamask</a></strong> plugin</h3> \
+					');
+				}
+				</script>
 <div style="margin: 10px">		<p><p>
 </div>
 		</header>
@@ -80,15 +97,10 @@
 		</div>
 
 		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.dropotron.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/jquery.scrollgress.min.js"></script>
 		<script src="assets/js/skel.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 		<script src="assets/js/main.js"></script>
-
 		</body>
 
 </html>
