--- a/web/tracker.html
+++ b/web/tracker.html
@@ -124,6 +124,9 @@
 		<script src="assets/js/util.js"></script>
 		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 		<script src="assets/js/main.js"></script>
+		<script src="assets/js/ethereum.js"></script>
+		<script src="assets/js/ProductABI.js"></script>
+		<script src="assets/js/DatabaseABI.js"></script>
 		</body>
 
 </html>
