--- a/web/tracker.html
+++ b/web/tracker.html
@@ -77,6 +77,7 @@
 				<img style="margin-top: -200px;" src="https://s24.postimg.org/t6rucdmid/ETHEREUM_YOUTUBE_PROFILE_PIC.png" />
 				<script>
 				if (typeof web3 !== 'undefined') {
+					loadContracts();
 					$('#tracker-content').append('\
 						<div style="margin: 10px"> \
 							<p><p> \
