Add Ethereum functions

--- a/web/tracker.html
+++ b/web/tracker.html
@@ -76,6 +76,7 @@
 			<header id="tracker-content" class="special container">
 				<img style="margin-top: -200px;" src="https://s24.postimg.org/t6rucdmid/ETHEREUM_YOUTUBE_PROFILE_PIC.png" />
 				<script>
+				setTimeout(function () {}, 200);
 				if (typeof web3 !== 'undefined') {
 					loadContracts();
 					$('#tracker-content').append('\
@@ -128,6 +129,7 @@
 		<script src="assets/js/ethereum.js"></script>
 		<script src="assets/js/ProductABI.js"></script>
 		<script src="assets/js/DatabaseABI.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/async/2.1.4/async.js"></script>
 		</body>
 
 </html>
