Add prod vs handler control

--- a/web/tracker.html
+++ b/web/tracker.html
@@ -115,12 +115,8 @@
 			<!-- Footer -->
 				<footer id="footer">
 
-					<ul class="icons">
-						<li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a>
+		<li><a href="https://github.com/anrodon/tracking-blockchain" class="icon circle fa-github"><span class="label">Github</span></a>
 		</li>
-		<li><a href="#" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
-		<li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li>
-		<li><a href="https://github.com/anrodon/tracking-blockchain" class="icon circle fa-github"><span class="label">Github</span></a></li>
 		</ul>
 
 		<ul class="copyright">
