Add prod vs handler control

--- a/web/faq.html
+++ b/web/faq.html
@@ -83,7 +83,8 @@
 
 			<!-- Footer -->
 				<footer id="footer">
-<li><a href="https://github.com/anrodon/tracking-blockchain" class="icon circle fa-github"><span class="label">Github</span></a>
+					<ul class="icons">
+						<li><a href="https://github.com/anrodon/tracking-blockchain" class="icon circle fa-github"><span class="label">Github</span></a>
 		</li>
 		</ul>
 
