--- a/web/tracker.html
+++ b/web/tracker.html
@@ -122,14 +122,15 @@
 
 		<!-- Footer -->
 		<footer id="footer">
-			<li><a href="https://github.com/anrodon/tracking-blockchain" class="icon circle fa-github"><span class="label">Github</span></a>
-			</li>
-			</ul>
+			<ul class="icons">
+				<li><a href="https://github.com/anrodon/tracking-blockchain" class="icon circle fa-github"><span class="label">Github</span></a>
+		</li>
+		</ul>
 
-			<ul class="copyright">
-				<li>&copy; SCTS - Supply Chain Tracking System</li>
-				<li>2017</li>
-			</ul>
+		<ul class="copyright">
+			<li>&copy; SCTS - Supply Chain Tracking System</li>
+			<li>2017</li>
+		</ul>
 		</footer>
 
 		</div>
@@ -141,4 +142,5 @@
 		<script src="assets/js/main.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/async/2.1.4/async.js"></script>
 		</body>
+
 </html>
