--- a/web/tracker.html
+++ b/web/tracker.html
@@ -28,7 +28,7 @@
 
 		<script>
 			var scanQR = function() {
-				if($('#mainbody').length){
+				if($('#handler_information').length){
 					$('#qr-video').css('display', 'block');
 				    $('#address_field').css('display', 'none');
 					$('#results-content').html('');
@@ -58,7 +58,7 @@
 			    $('#qr-video').css('display', 'none');
 			    $('#address_field').css('display', 'block');
 				$('#results-content').html('');
-				processAdress($('#address_field').val());
+				processAddress($('#address_field').val());
 			}
 		</script>
 
