--- a/web/tracker.html
+++ b/web/tracker.html
@@ -28,7 +28,7 @@
 
 		<script>
 			var scanQR = function() {
-				if($('#handler_information').length){
+				if($('#mainbody').length != 0){
 					$('#qr-video').css('display', 'block');
 				    $('#address_field').css('display', 'none');
 					$('#results-content').html('');
