--- a/web/tracker.html
+++ b/web/tracker.html
@@ -11,6 +11,7 @@
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/extra.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 
@@ -25,6 +26,9 @@
 		<script src="assets/js/ProductABI.js"></script>
 		<script src="assets/js/DatabaseABI.js"></script>
 		<script src="assets/js/ethereum.js"></script>
+
+		<script type="text/javascript" src="assets/js/jquery.subwayMap-0.5.0.js"></script>
+		<script src="assets/js/data.js"></script>
 
 		<script>
 			var scanQR = function() {
