--- a/web/index.html
+++ b/web/index.html
@@ -70,9 +70,7 @@
 					<p>The Supply Chain Tracking Standard Smart Contract framework is the essence of our project. Blockchain technology allows us to track every product from the beginning to the moment that arrive to your hands, verifying the authenticity of it in a descentralized
 						way and ensuring the maximum trustfulness with consensus algorithms.</p>
 					<footer>
-						<ul class="buttons">
-							<li><a href="https://github.com/anrodon/tracking-blockchain" class="button">Visit our Github page</a></li>
-						</ul>
+
 					</footer>
 
 				</div>
@@ -195,7 +193,7 @@
 
 			<footer class="major">
 				<ul class="buttons">
-					<li><a href="mailto:andreu@atraura.com" class="button">Get in touch</a></li>
+					<li><a href="mailto:david.riudor@gmail.com" class="button">Get in touch</a></li>
 				</ul>
 			</footer>
 
@@ -213,7 +211,7 @@
 					<footer>
 						<ul class="buttons">
 							<li><a href="tracker.html" class="button special">Tracker</a></li>
-							<li><a href="https://github.com/anrodon/tracking-blockchain" class="button">Read the code</a></li>
+							
 						</ul>
 					</footer>
 
@@ -223,7 +221,7 @@
 				<footer id="footer">
 
 					<ul class="icons">
-						<li><a href="https://github.com/anrodon/tracking-blockchain" class="icon circle fa-github"><span class="label">Github</span></a></li>
+						
 					</ul>
 
 					<ul class="copyright">
